--- a/k9mail/build.gradle
+++ b/k9mail/build.gradle
@@ -28,6 +28,7 @@ dependencies {
     compile "com.squareup.okio:okio:${okioVersion}"
     compile 'commons-io:commons-io:2.4'
     compile "com.android.support:support-v4:${androidSupportLibraryVersion}"
+    compile "com.android.support:appcompat-v7:${androidSupportLibraryVersion}"
     compile 'net.sourceforge.htmlcleaner:htmlcleaner:2.18'
     compile 'de.cketti.library.changelog:ckchangelog:1.2.1'
     compile 'com.github.bumptech.glide:glide:3.6.1'
@@ -55,7 +56,7 @@ android {
         versionName '5.207'
 
         minSdkVersion 15
-        targetSdkVersion 22
+        targetSdkVersion 25
 
         generatedDensities = ['mdpi', 'hdpi', 'xhdpi']
 
