--- a/k9mail/build.gradle
+++ b/k9mail/build.gradle
@@ -50,11 +50,11 @@ android {
     buildToolsVersion androidBuildToolsVersion
 
     defaultConfig {
-        applicationId "com.fsck.k9"
-        testApplicationId "com.fsck.k9.tests"
+        applicationId "com.fsck.k9.materialfork"
+        testApplicationId "com.fsck.k9.materialfork.tests"
 
-        versionCode 23270
-        versionName '5.207'
+        versionCode 232701
+        versionName '5.207.1'
 
         minSdkVersion 15
         targetSdkVersion 25
