Adds grant permissions request for marshmallow and later. Since not granted permissions are unhandled and cause runtime exceptions, the grant permission request will pop up every time when entering accounts activity until all permissions are granted.

--- a/k9mail/build.gradle
+++ b/k9mail/build.gradle
@@ -36,6 +36,7 @@ dependencies {
     compile "com.splitwise:tokenautocomplete:${tokenautocomplete}"
     compile "de.cketti.safecontentresolver:safe-content-resolver-v14:${safecontentresolver}"
     compile "com.github.amlcurran.showcaseview:library:${showcaseview}"
+    compile "com.karumi:dexter:${dexter}"
 
     androidTestCompile 'com.android.support.test.espresso:espresso-core:2.2.1'
 
