--- a/k9mail-library/build.gradle
+++ b/k9mail-library/build.gradle
@@ -11,6 +11,9 @@ if (rootProject.testCoverage) {
 
 repositories {
     jcenter()
+    maven {
+        url 'https://maven.google.com'
+    }
 }
 
 dependencies {
